Fixing spacing from top issue with headings when jumping to sections. Updated background gradient. Made home icon appear on desktops as well. Fixed widths of sections and placement of project images

--- a/app/assets/stylesheets/main.css
+++ b/app/assets/stylesheets/main.css
@@ -97,11 +97,12 @@ body {
     padding: 0;
    
     /* Dark to light gradient */
-    background: linear-gradient(to bottom,#f25934 0%,  #f27d52 35%, #f2a488 65%, #f9f2ed 100%),
+    background: linear-gradient(to bottom,#f28a2E 0%,  #f5f5f5 100%);/*,
     url('beige-paper.png');
   
+  
     
-    /* background: linear-gradient(#f9f2ed 0%,  #f2a488 35%, #f27d52 90%, #f25934 100%);*/
+     background: linear-gradient(#f9f2ed 0%,  #f2a488 35%, #f27d52 90%, #f25934 100%);*/
     background-blend-mode: overlay;
 }
 
@@ -112,6 +113,7 @@ header {
 .inner-page {
   height: 75vh;
 }
+
 img {
   max-width: 90%;
 }
@@ -260,6 +262,9 @@ nav {
 .open .hamburger::after {
   transform: translateY(-3px) rotate(-90deg);
 }  
+
+}
+
 .home {
   /* This places HOME button in the top left
   padding-left: 2em;
@@ -278,7 +283,6 @@ nav {
   bottom: 2em;
   right: 2em;
         
-}
 }
 /******** HEADER ********/
 .header-logo {
@@ -333,7 +337,7 @@ footer {
 	padding-bottom: 5em;
 }
 .mission-heading-first {
-  padding-top: 13em;
+  padding-top: 3em;
 }
     
 /******** PROJECT ********/
@@ -343,6 +347,11 @@ footer {
 #work h3 {
   margin: 4em auto 1.5em auto;
 }
+
+.heading-first {
+  padding-top: 3em;
+}
+  
 .project {
   width: 100%;
   display: flex;
@@ -352,12 +361,16 @@ footer {
   padding-bottom: 3em;
 }
 .project-image {
+  /*
   display: flex;
-  justify-content: center;
+  justify-content: flex-start;
   align-items: center;
+  */
   min-width: 35%;
   padding-bottom: 1em;
 }
+
+
 .project a {
   text-align: center;
   color: #433f3d;
@@ -674,12 +687,13 @@ Desktop Styles
   }
   .nav {
     position: fixed;
-    padding-top: 2em;
-    padding-bottom: 2em;
+    padding-top: 1em;
+    padding-bottom: 1em;
     z-index: 1000;
     top: 0;
     width: 100%;
-      background-color: rgba(241,86,49,.1); 
+      /*background-color: rgba(241,86,49,.75); */
+    background: #f28a2e;
   }
   ul {
     display: flex;
@@ -701,14 +715,15 @@ Desktop Styles
     color: white;
     text-shadow: 1px 1px 3px #000; 
   }
+  /*
   .home {
     display: none;
   }
-
+*/
   /***** PROJECT *****/
   #work {
-    width: 83%;
-    margin: auto 8% auto 8%;
+    width: 66%;
+    margin: auto 16% auto 16%;
   }
   .project {
     display: flex;
